# ACARM-ng

./: .bzrignore  .coding_convention_check_in_files  Makefile  TODO  bzr_build.conf  bzr_build_all.conf  bzr_build_some.conf  bzr_team.conf  check_coding_convention  coding_convention_check  configure  deliver_to_private_branch
.bzr_plugins/: bzr_buildbot.py
daemon/: TODO  build  components.lst  config.mk  develop  run_all_tests  run_all_tests_leak_check  run_all_tests_mem_test
daemon/.misc/: acarm_ng_conf.xsd
daemon/.misc/logs/: get_sql_exec_times  (+1 more)
daemon/build_config/: components.lst  components_test.lst  config.mk  features.txt
daemon/curlpp/: user_pre.mk
daemon/idmef/: user_pre.mk
daemon/idmef/libidmef/: ChangeLog  INSTALL  autogen.sh  configure  configure.in  libidmef-functions-asset.map  libidmef-functions-rfc.map  libidmef-functions.map
daemon/idmef/libidmef/autom4te.cache/: output.1  output.3  traces.1  traces.3
daemon/idmef/libidmef/examples/: test2  test2.c
daemon/idmef/libidmef/include/: Makefile.am  idmef_create.h.in  idmef_global.h.in  idmef_list.h  idmef_types.h
daemon/idmef/libidmef/src/: Makefile.am  create.c.in  ilist.c  message.c
daemon/idmef/libidmef/xml/: Makefile.in
daemon/idmef/libidmef/xml/idmef-messages/: Makefile.in  example1.xml.in  example11.xml.in  example12.xml.in  example17.xml.in  example3.xml.in  example4.xml.in  example8.xml.in
daemon/libidmef/: user_pre.mk
daemon/libidmef/libidmef/: AUTHORS  COPYING.BSD  FAQ  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  libidmef-config.in  libidmef.pc.in  libidmef.spec
daemon/libidmef/libidmef/autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
daemon/libidmef/libidmef/examples/: Makefile.am  Makefile.in  example1  example1.c  example2  example2.c  example3  example3.c  test.c
daemon/libidmef/libidmef/include/: Makefile.in  gen.pl  idmef_create_helpers.h  idmef_message.h  idmef_parser.h  idmef_parser_helpers.h  idmef_strings.h
daemon/libidmef/libidmef/src/: Makefile.in  create-helpers.c  create.c.tmpl  global.c  helpers.c  parser.c  strings.c
daemon/libidmef/libidmef/xml/: Makefile.am  idmef-message.dtd
daemon/libidmef/libidmef/xml/idmef-messages/: Makefile.am  README  example10.xml.in  example13.xml.in  example14.xml.in  example15.xml.in  example16.xml.in  example18.xml.in  example2.xml.in  example20.xml.in  example5.xml.in  example6.xml.in  example7.xml.in  example9.xml.in
daemon/prelude/: user_pre.mk
daemon/preludepp/: user_pre.mk
daemon/system/: Makefile
data_model/: 00_drop_logs.sql  01_drop_config.sql  02_drop_alerts.sql  03_drop_correlated_alerts.sql  04_drop_filter_states.sql  05_drop_filter_states.sql  05_drop_processor_states.sql  06_drop_correlated_alerts.sql  06_drop_meta_alerts.sql  07_drop_alerts.sql  08_drop_config.sql  08_drop_logs.sql  10_create_logs.sql  11_create_config.sql  11_create_logs.sql  12_create_alerts.sql  13_create_correlated_alerts.sql  13_create_meta_alerts.sql  14_create_filter_states.sql  14_create_processor_states.sql  21_fill_config.sql  22_fill_alerts.sql  30_grant_logs.sql  31_grant_config.sql  32_grant_alerts.sql  33_grant_meta_alerts.sql  34_grant_filter_states.sql  34_grant_processor_states.sql  init_db
data_model/postgres/: 07_drop_alerts.sql  08_drop_wui.sql  11_create_wui.sql  12_create_alerts.sql  13_create_meta_alerts.sql  32_grant_alerts.sql  init_db  init_test_db
data_model/tests/: create_test_user.sql
doc/: CONFIGURATION.txt  INSTALLATION.txt  LICENSE.exceptions.txt  LICENSE.txt  RELEASE_NOTES.txt  RELEASE_PROCEDURE.txt  REQUIREMENTS.txt  TROUBLESHOOTING.txt  config_file_readme.txt
doc/acarm-ng/: 128042.diagram  134570.diagram  134698.diagram  141098.diagram  acarm-ng.prj
doc/example_configs/: example1.xml  minimal.xml  preproc_include_example.xml
doc/feature_spec/: next_features_spec.txt
doc/overview/: acarm_report.odt
doc/v0.1.0/: config_file_readme.txt  dbshiled_example.txt  feature_spec.txt  next_features_spec.txt
ext_patches/gloox/: gnutls_leaks.patch
ext_patches/libgadu/: xhtml_message_memleak.patch
ext_patches/loudmouth/: callback_deallocation.patch  connection_features_cb_leak.patch  sasl_digest_md5_leak.patch  stream_id_leak.patch
ext_patches/prado/: log_postgres_fix.patch
ext_patches/vmime/: vmime_sock_copy_fix.patch  vmime_tlssocket_memleak.patch
ext_src/: build_process.tar.bz2  system.tar.bz2  team_tools.tar.bz2  versions.txt  xml.tar.bz2
misc/: bzr_build_all.conf  bzr_build_some.conf  coding_convention_check_in_files  deliver_to_private_branch
misc/config_tests/: 000_check_compiler  000_check_gcc  001_boost_filesystem_version  001_boost_spirit_version  001_boost_version  001_openssl_version  001_stl  002_check_boost_asio  002_check_boost_mpl  002_check_boost_regex  002_check_boost_thread  002_check_openssl  002_check_xml-2.6  002_need_intel_sizeof_macros_workaround  003_check_boost_tokenizer  010_boost_version  010_check_boost_date_time  010_check_boost_smart_ptr  010_check_curl  010_check_gloox  010_check_libgadu  010_check_libpqxx  010_check_libprelude  010_check_vmime  010_check_xml-2.6  030_boost_filesystem_version  030_check_boost_asio  030_check_boost_mpl  030_check_boost_operators  030_check_boost_program_options  030_check_boost_tuple  030_check_boost_type_traits  030_check_boost_utilities  040_check_openssl  040_check_xml-2.6  100_check_curl  100_check_curlpp  100_check_gloox  100_check_libgadu  100_check_libprelude  (+3 more)
src/: BUGS  TODO  build  components.lst  develop_memdebug  run_all_tests  run_all_tests_leak_check
src/.misc/: acarm_ng_conf.xsd  logrotate_acarm-ng
src/build_config/: components.lst  components_mtest.lst  config.mk  features.txt
src/configio/: config_file_readme.txt  readme.txt
src/curlpp/: Makefile  user_pre.mk
src/libprelude/: fix_paths
team_tools/: README  RELEASE_NOTES  TODO
team_tools/bzr/: deliver
wui/: TODO  framework
wui/.misc/: nagios_plugin
wui/misc/: acarmng_nagios.cfg
wui/site/: OpenLayers.js  index.php  style.css  styleOL.css
wui/temporary/: index.html
wui/tests/: index.php
(+4449 files in other folders)
