## Process this file with automake to produce Makefile.in

SUBDIRS = examples include src xml

EXTRA_DIST = COPYING.BSD \
             FAQ \
             libidmef-functions.map \
             libidmef.pc.in \
             libidmef.spec

bin_SCRIPTS = libidmef-config

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libidmef.pc
